# harvest-forecast-py

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  release-please-config.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml  release-please.yml
.specs/superpowers/specs/: 2026-07-10-harvest-forecast-py-design.md
docs/: changelog.md  index.md
docs/api-reference/: client.md  exceptions.md  overview.md  retry.md  schemas.md
docs/getting-started/: installation.md  quick-start.md
docs/guides/: aggregates.md  assignments.md  async-vs-sync.md  authentication.md  error-handling.md  retry.md
scripts/: unasync.py
src/harvest_forecast/: __init__.py  exceptions.py  retry.py  schemas.py
src/harvest_forecast/_async/: __init__.py  client.py
src/harvest_forecast/_harvest/: __init__.py  client.py
src/harvest_forecast/_sync/: __init__.py  client.py
tests/: conftest.py  test_exceptions.py  test_harvest_client.py  test_harvest_schemas.py  test_retry.py  test_schemas.py
tests/_async/: test_client.py
tests/_sync/: test_client.py
