[project]
name = "harvest-forecast-py"
version = "0.1.0"
description = "Python client for the Harvest Forecast API — async and sync, with full coverage."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "AZX, PBC.", email = "oss@azx.io" }]
keywords = ["harvest", "forecast", "api", "client", "scheduling", "async"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.0",
    "tenacity>=9.0",
]

[project.urls]
Homepage = "https://github.com/AZX-PBC-OSS/harvest-forecast-py"
Documentation = "https://AZX-PBC-OSS.github.io/harvest-forecast-py/"
Repository = "https://github.com/AZX-PBC-OSS/harvest-forecast-py"
Issues = "https://github.com/AZX-PBC-OSS/harvest-forecast-py/issues"
Changelog = "https://github.com/AZX-PBC-OSS/harvest-forecast-py/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harvest_forecast"]

[tool.hatch.build.targets.sdist]
include = ["src/harvest_forecast", "README.md", "LICENSE", "pyproject.toml"]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
    "pip-audit>=2.10.1",
    "pyright>=1.1.411",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-timeout>=2.4.0",
    "respx>=0.23.1",
    "ruff>=0.15.20",
    "unasync>=0.6.0",
]

[tool.uv]
package = true

# ---------- ruff ----------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]
exclude = ["src/harvest_forecast/_sync"]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle / pyflakes
    "I",                # isort
    "N",                # pep8-naming
    "B",                # flake8-bugbear
    "UP",               # pyupgrade
    "SIM",              # flake8-simplify
    "RET",              # flake8-return
    "PT",               # flake8-pytest-style
    "ASYNC",            # flake8-async
    "S",                # flake8-bandit
    "RUF",              # ruff-specific
    "C4",               # comprehensions
    "DTZ",              # naive datetime
    "TCH",              # type-checking blocks
    "PTH",              # use pathlib
]
ignore = [
    "S101",     # asserts in tests
    "E501",     # line length handled by formatter
    "TCH001", "TCH002", "TCH003",  # don't force TYPE_CHECKING imports
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PLR2004", "DTZ001"]

[tool.ruff.format]
quote-style = "double"

# ---------- pyright ----------
[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
venvPath = "."
venv = ".venv"

[[tool.pyright.executionEnvironments]]
root = "tests"
reportPrivateUsage = false
reportUnknownArgumentType = false
reportUnknownVariableType = false

# ---------- pytest ----------
[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config --timeout=5"
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["error"]

[tool.coverage.run]
source = ["src/harvest_forecast"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
